# ccb-rust

./: .gitignore  .update-check.json  AGENTS.override.md  BUILD_INFO.json  CHANGELOG.md  HANDOFF.md  README.md  README_zh.md  ccb  ccbr  ccbr.py.legacy  ccbr_test  ccc.md  install.ps1  install.sh  package.json
crates/ccbr-agents/: Cargo.toml
crates/ccbr-agents/src/: agent_roles_manager.rs  api.rs  compact.rs  defaults.rs  helpers.rs  layout.rs  layout_plan.rs  lib.rs  nodes.rs  ops.rs  paths.rs  policy.rs  projection.rs  rendering.rs  role_aliases.rs  rolepacks.rs  sources.rs  spec.rs  store.rs  workspace.rs
crates/ccbr-agents/tests/: layout_runtime_tests.rs  store_tests.rs
crates/ccbr-cli/: Cargo.toml
crates/ccbr-cli/src/: ask_sender.rs  ask_usage.rs  auxiliary.rs  ccbrd.rs  claude_home_cleanup.rs  cleanup.rs  context.rs  daemon.rs  diagnostics.rs  entry.rs  entrypoint_runtime.rs  facade.rs  handlers_ask.rs  helpers.rs  listing.rs  local.rs  logs.rs  management.rs  models.rs  models_start.rs  ops_views_basic.rs  ops_views_common.rs  ops_views_doctor.rs  output.rs  parser.rs  phase2.rs  release_artifacts.rs  render.rs  resubmit.rs  retry.rs  service.rs  tags.rs  tmux_runtime.rs  tmux_start_layout.rs  versioning.rs  wait.rs  watch.rs
crates/ccbr-cli/tests/: cli_integration_tests.rs  cli_maintenance_tests.rs  cli_stub_commands_tests.rs  cli_wait_tests.rs  daemon_tests.rs  doctor_runtime_identity_tests.rs  kill_runtime_agent_cleanup_tests.rs  kill_runtime_processes_tests.rs  management_install_tests.rs  provider_hooks_service_tests.rs  restart_service_tests.rs  sidebar_click_tests.rs  smoke_test.rs  v2_diagnostics_bundle_tests.rs
crates/ccbr-daemon/: Cargo.toml  README.md
crates/ccbr-daemon/src/: app.rs  health_runtime.rs  main.rs  polling.rs  provider_launcher.rs  reload_apply_namespace.rs  reload_apply_plan.rs  reload_apply_runtime.rs  reload_apply_service.rs  reload_apply_stages.rs  reload_handoff.rs  reload_patch.rs  reload_runtime_mount_models.rs  reload_runtime_mount_service.rs  reload_runtime_mount_validation.rs  reload_transaction.rs  reload_transaction_context.rs  reload_transaction_models.rs  reload_transaction_preflight.rs  reload_transaction_records.rs  reload_transaction_results.rs  socket_client.rs  start_flow_runtime_service.rs  system.rs  terminal_adapter.rs  tick.rs
crates/ccbr-daemon/tests/: callbacks_tests.rs  client_runtime_resolution_tests.rs  comms_recover_tests.rs  daemon_integration_tests.rs  daemon_restore_jobs_tests.rs  handler_maintenance_tests.rs  lifecycle_keeper_integration_tests.rs  ownership_persistence_tests.rs  project_namespace_controller_tests.rs  project_namespace_state_tests.rs  provider_launcher_codex_claude_tests.rs  reload_handoff_integration_tests.rs  runtime_launch_agent_runtime_tests.rs
crates/ccbr-message-bureau/: Cargo.toml
crates/ccbr-message-bureau/src/: control.rs  control_queue.rs  facade_recording.rs  models.rs  reply_metadata.rs  reply_payloads.rs
crates/ccbr-message-bureau/tests/: smoke.rs
crates/ccbr-project/: Cargo.toml
crates/ccbr-project/src/: identity.rs  runtime_paths.rs
crates/ccbr-provider-core/: Cargo.toml
crates/ccbr-provider-core/src/: identity.rs  lib.rs  model_shortcuts.rs  pathing.rs  projected_assets.rs  registry.rs  runtime_specs.rs  session.rs  session_binding.rs  test_double_backends.rs
crates/ccbr-provider-core/tests/: reexports.rs  registry_tests.rs  source_home_tests.rs
crates/ccbr-runtime-pid-cleanup/: Cargo.toml
crates/ccbr-runtime-pid-cleanup/src/: collection.rs  termination.rs
crates/ccbr-runtime-pid-cleanup/tests/: smoke.rs
crates/ccbr-storage-classification/: Cargo.toml
crates/ccbr-storage-classification/tests/: smoke.rs
crates/ccbr-terminal/: Cargo.toml
crates/ccbr-terminal/src/: api.rs  backend.rs  backend_env.rs  env.rs  input.rs  layouts.rs  layouts_models.rs  logs.rs  pane_logs.rs  panes.rs  readiness.rs  registry.rs  stdio.rs  tmux.rs  tmux_attach.rs  tmux_backend_panes.rs  tmux_readiness.rs  tmux_respawn_service.rs  tmux_theme.rs
crates/ccbr-terminal/tests/: backend_env_tests.rs  test_backend.rs  test_tmux_helpers.rs  tmux_identity_tests.rs
crates/ccbr-types/: Cargo.toml
crates/ccbr-types/src/: lib.rs
crates/ccbr-types/tests/: env.rs  i18n.rs  user_session.rs
crates/ccbr-ui-text/: Cargo.toml
crates/ccbr-ui-text/src/: lib.rs
rust/: Cargo.toml
rust/.omc/: project-memory.json
rust/.omc/state/: agent-replay-3cbe7607-4db7-49ae-bf22-7d2a9b84498b.jsonl  idle-notif-cooldown.json
rust/crates/ccb-agents/: Cargo.toml
rust/crates/ccb-cli/: Cargo.toml
rust/crates/ccb-completion/: Cargo.toml
rust/crates/ccb-daemon/: Cargo.toml  README.md
rust/crates/ccb-heartbeat/: Cargo.toml
rust/crates/ccb-jobs/: Cargo.toml
rust/crates/ccb-mailbox/: Cargo.toml
rust/crates/ccb-memory/: Cargo.toml
rust/crates/ccb-message-bureau/: Cargo.toml
rust/crates/ccb-pane-registry/: Cargo.toml
rust/crates/ccb-project/: Cargo.toml
rust/crates/ccb-provider-core/: Cargo.toml
rust/crates/ccb-provider-hooks/: Cargo.toml
rust/crates/ccb-provider-profiles/: Cargo.toml
rust/crates/ccb-provider-sessions/: Cargo.toml
rust/crates/ccb-providers/: Cargo.toml  Cargo.toml.bak
rust/crates/ccb-runtime-pid-cleanup/: Cargo.toml
rust/crates/ccb-stdio-runtime/: Cargo.toml
rust/crates/ccb-storage/: Cargo.toml
rust/crates/ccb-storage-classification/: Cargo.toml
rust/crates/ccb-terminal/: Cargo.toml
rust/crates/ccb-types/: Cargo.toml
rust/crates/ccb-ui-text/: Cargo.toml
rust/crates/ccb-workspace/: Cargo.toml
rust/crates/ccbr-completion/: Cargo.toml
rust/crates/ccbr-daemon/: Cargo.toml  README.md
rust/crates/ccbr-heartbeat/: Cargo.toml
rust/crates/ccbr-jobs/: Cargo.toml
rust/crates/ccbr-mailbox/: Cargo.toml
rust/crates/ccbr-memory/: Cargo.toml
rust/crates/ccbr-pane-registry/: Cargo.toml
rust/crates/ccbr-provider-hooks/: Cargo.toml
rust/crates/ccbr-provider-profiles/: Cargo.toml
rust/crates/ccbr-provider-sessions/: Cargo.toml
rust/crates/ccbr-providers/: Cargo.toml
rust/tools/ccb-cleanup/: Cargo.toml
tools/ccbr-mcp-server/: Cargo.toml
(+3739 files in other folders)
