[package]
name = "ccbr-agents"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
camino = { workspace = true }
ccbr-storage = { workspace = true }
ccbr-types = { workspace = true }
ccbr-provider-core = { workspace = true }
ccbr-provider-profiles = { workspace = true }
shellexpand = "3"
shell-words = "1.1"
which = "7"

[dev-dependencies]
tempfile = "3"
