[package]
name = "ccbr-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ccbr"
path = "src/main.rs"

[[bin]]
name = "ask"
path = "src/bin/ask.rs"

[[bin]]
name = "autonew"
path = "src/bin/autonew.rs"

[[bin]]
name = "ctx-transfer"
path = "src/bin/ctx-transfer.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
camino = { workspace = true }
ccbr-storage = { workspace = true }
ccbr-storage-classification = { workspace = true }
ccbr-workspace = { workspace = true }
ccbr-types = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
ccbr-provider-core = { workspace = true }
ccbr-agents = { workspace = true }
ccbr-mailbox = { workspace = true }
ccbr-terminal = { workspace = true }
ccbr-provider-sessions = { workspace = true }
ccbr-provider-hooks = { workspace = true }
ccbr-provider-profiles = { workspace = true }
ccbr-providers = { workspace = true }
ccbr-memory = { workspace = true }
ccbr-runtime-pid-cleanup = { workspace = true }
ccbr-daemon = { workspace = true }
ccbr-heartbeat = { workspace = true }
tempfile = { workspace = true }
libc = "0.2"

[dev-dependencies]
ccbr-daemon = { workspace = true }
tempfile = { workspace = true }
