[package]
name = "ccbr-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
