[package]
name = "ccbr-provider-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
camino = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
fs2 = { workspace = true }
libc = "0.2"
ccbr-storage = { workspace = true }
ccbr-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
