[package]
name = "ccbr-runtime-pid-cleanup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
ccbr-storage = { workspace = true }
ccbr-providers = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
