[package]
name = "ccbr-storage-classification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
camino = { workspace = true }
ccbr-storage = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
