[package]
name = "ccbr-ui-text"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sys-locale = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
