[package]
name = "ccbr-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ccbr-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
ccbr-cli = { workspace = true }
ccbr-storage = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
