[package]
name = "ccb-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ccb"
path = "src/main.rs"

[[bin]]
name = "ask"
path = "src/bin/ask.rs"

[[bin]]
name = "autonew"
path = "src/bin/autonew.rs"

[[bin]]
name = "ctx-transfer"
path = "src/bin/ctx-transfer.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
camino = { workspace = true }
ccb-storage = { workspace = true }
ccb-storage-classification = { workspace = true }
ccb-workspace = { workspace = true }
ccb-types = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
ccb-provider-core = { workspace = true }
ccb-agents = { workspace = true }
ccb-mailbox = { workspace = true }
ccb-terminal = { workspace = true }
ccb-provider-sessions = { workspace = true }
ccb-provider-hooks = { workspace = true }
ccb-provider-profiles = { workspace = true }
ccb-providers = { workspace = true }
ccb-memory = { workspace = true }
ccb-runtime-pid-cleanup = { workspace = true }
ccb-daemon = { workspace = true }
ccb-heartbeat = { workspace = true }
tempfile = { workspace = true }
libc = "0.2"

[dev-dependencies]
ccb-daemon = { workspace = true }
tempfile = { workspace = true }
