[package]
name = "ccb-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ccb-storage = { workspace = true }
ccb-types = { workspace = true }
ccb-provider-core = { workspace = true }
ccb-terminal = { workspace = true }
ccb-mailbox = { workspace = true }
ccb-jobs = { workspace = true }
ccb-agents = { workspace = true }
ccb-providers = { workspace = true }
ccb-completion = { workspace = true }
ccb-heartbeat = { workspace = true }
ccb-provider-profiles = { workspace = true }
ccb-provider-sessions = { workspace = true }
ccb-workspace = { workspace = true }
ccb-project = { workspace = true }
camino = { workspace = true }
libc = "0.2"
sha2 = { workspace = true }
hex = { workspace = true }
ctrlc = { version = "3", features = ["termination"] }

[[bin]]
name = "ccbd"
path = "src/main.rs"

[features]
test-support = []

[[test]]
name = "runtime_launch_ensure_agent_runtime_tests"
required-features = ["test-support"]

[dev-dependencies]
tempfile = "3"
