[package]
name = "ccb-heartbeat"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
camino = { workspace = true }
fs2 = { workspace = true }
ccb-storage = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
