[package]
name = "ccb-memory"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
camino = { workspace = true }
ccb-storage = { workspace = true }
ccb-provider-core = { workspace = true }
ccb-provider-sessions = { workspace = true }
ccb-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
