[package]
name = "ccb-pane-registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
camino = { workspace = true }
ccb-project = { workspace = true }
ccb-provider-core = { workspace = true }
ccb-storage = { workspace = true }
ccb-terminal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
