[package]
name = "ccb-provider-hooks"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
camino = { workspace = true }
ccb-storage = { workspace = true }
ccb-types = { workspace = true }
ccb-provider-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
