[package]
name = "ccb-provider-profiles"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
camino = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = "2"
shell-escape = "0.1"
ccb-provider-core = { workspace = true }
ccb-storage = { workspace = true }
ccb-types = { workspace = true }

[dev-dependencies]
tempfile = "3"
