[package]
name = "ccb-provider-sessions"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ccb-storage = { workspace = true }
ccb-types = { workspace = true }
camino = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
