[package]
name = "ccb-runtime-pid-cleanup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
ccb-storage = { workspace = true }
ccb-providers = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
