[package]
name = "ccb-storage-classification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
camino = { workspace = true }
ccb-storage = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
